minor bug fixes

--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
       .navbar a {
         margin: 5px 15px;
         text-decoration: none;
-        color: #fff;
+        /* color: #fffa; */
         /* font-weight: bold; */
+      }
+      .navbar a.ui-btn-active {
+        color: #fff; /* Ensure active link color is white */
       }
 
       .navbar a:hover {
@@ -152,7 +155,7 @@
         <h1>About Us</h1>
         <div class="navbar">
           <a href="#home">Home</a>
-          <a href="#about">About Us</a>
+          <a href="#about" class="ui-btn-active">About Us</a>
           <a href="#programs">Programs</a>
           <a href="#application">Application Process</a>
           <a href="#destinations">Destinations</a>
@@ -166,7 +169,13 @@
           <img src="/assets/about.jpg" alt="About Us Image" />
           <div class="card-content">
             <h2>Our Mission</h2>
-            <p>We are dedicated to providing students with transformative exchange experiences. Learn about our history, mission, and achievements.</p>
+            <p>We are dedicated to providing students with transformative exchange experiences. Our mission is to foster global understanding and personal growth through immersive educational programs.</p>
+
+            <h2>Our History</h2>
+            <p>Founded in 2001, our organization has been committed to bridging cultures and expanding educational opportunities for students worldwide. Over the past two decades, we have established partnerships with over 50 universities and institutions across the globe.</p>
+
+            <h2>Our Achievements</h2>
+            <p>Throughout our journey, we have successfully facilitated over 10,000 exchange experiences, received multiple awards for excellence in international education, and consistently achieved high satisfaction rates among our participants. Our alumni have gone on to become global leaders and influencers in various fields.</p>
           </div>
         </div>
       </div>
@@ -179,7 +188,7 @@
         <div class="navbar">
           <a href="#home">Home</a>
           <a href="#about">About Us</a>
-          <a href="#programs">Programs</a>
+          <a href="#programs" class="ui-btn-active">Programs</a>
           <a href="#application">Application Process</a>
           <a href="#destinations">Destinations</a>
           <a href="#scholarships">Scholarships</a>
@@ -232,7 +241,7 @@
           <a href="#home">Home</a>
           <a href="#about">About Us</a>
           <a href="#programs">Programs</a>
-          <a href="#application">Application Process</a>
+          <a href="#application" class="ui-btn-active">Application Process</a>
           <a href="#destinations">Destinations</a>
           <a href="#scholarships">Scholarships</a>
           <a href="#resources">Resources</a>
@@ -265,7 +274,7 @@
           <a href="#about">About Us</a>
           <a href="#programs">Programs</a>
           <a href="#application">Application Process</a>
-          <a href="#destinations">Destinations</a>
+          <a href="#destinations" class="ui-btn-active">Destinations</a>
           <a href="#scholarships">Scholarships</a>
           <a href="#resources">Resources</a>
           <a href="#contact">Contact Us</a>
@@ -330,7 +339,7 @@
           <a href="#programs">Programs</a>
           <a href="#application">Application Process</a>
           <a href="#destinations">Destinations</a>
-          <a href="#scholarships">Scholarships</a>
+          <a href="#scholarships" class="ui-btn-active">Scholarships</a>
           <a href="#resources">Resources</a>
           <a href="#contact">Contact Us</a>
         </div>
@@ -379,7 +388,7 @@
           <a href="#application">Application Process</a>
           <a href="#destinations">Destinations</a>
           <a href="#scholarships">Scholarships</a>
-          <a href="#resources">Resources</a>
+          <a href="#resources" class="ui-btn-active">Resources</a>
           <a href="#contact">Contact Us</a>
         </div>
       </div>
@@ -421,7 +430,7 @@
           <a href="#destinations">Destinations</a>
           <a href="#scholarships">Scholarships</a>
           <a href="#resources">Resources</a>
-          <a href="#contact">Contact Us</a>
+          <a href="#contact" class="ui-btn-active">Contact Us</a>
         </div>
       </div>
       <div role="main" class="ui-content page-content">
