changed hamburger color

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         }
         .hamburger {
           display: block;
-          color: #fff;
+          color: #3a3a3a;
           text-align: center;
         }
         .navbar-mobile {
